--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,30 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.nav {
   display: flex;
-  flex-direction: column;
+  justify-content: space-between;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  background-color: #de8229;
+  color: #f6f6f6;
+  padding: 0 60px;
+}
+.nav-title,
+.nav-menu,
+.nav-social{
+  display: flex;
+  align-items: center;
+}
+.nav-menu{
+  justify-content: space-between;
+}
+.nav-social{
+  justify-content: end;
 }
 
-.App-link {
-  color: #61dafb;
+.nav-title h1{
+  font-size: 24px;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.nav-title img{
+  max-height: 50px;
+}
+.nav-social i{
+  font-size: 32px;
 }
