--- a/src/App.css
+++ b/src/App.css
@@ -109,18 +109,21 @@
 }
 
 .btn-purple {
-  background: rgb(117, 57, 207);
-  background: linear-gradient(180deg, rgba(117, 57, 207, 1) 0%, rgba(124, 99, 193, 1) 50%, rgba(152, 150, 196, 1) 100%);
+  background: #375555;
+  /* background: linear-gradient(180deg, rgba(85, 112, 103, 1) 0%, rgba(52, 111, 92, 1) 50%, rgba(21, 111, 81, 1) 100%); */
   text-align: center;
   /* text-transform: uppercase; */
-  font-size: 20px;
+  font-size: 1.4vw;
   color: #fcfefc;
   border-radius: 25px;
-  padding: 7px 3px 5px 3px;
+  padding: 10px 3px 10px 3px;
+  transition: transform 0.3s;
 }
 
 .btn-purple:hover {
   cursor: pointer;
+  /* background: linear-gradient(180deg, rgba(158, 79, 1, 1) 0%, rgba(85, 112, 103, 1) 50%, rgba(246, 158, 79, 1) 100%); */
+  transform: scale(1.1);
 }
 
 a {
@@ -285,6 +288,10 @@ label {
     margin: 50px 0px 40px 0px;
   }
 
+  #services {
+  margin: 50px 25px 40px 25px;
+}
+
   .social-media-icons i,
   .social-footer i {
     font-size: 2.5vw;
@@ -292,6 +299,10 @@ label {
 
   #footer {
     margin: 50px 0px 40px 0px;
+  }
+
+  .btn-purple{
+    font-size: 2vw;
   }
 }
 
@@ -333,6 +344,15 @@ label {
   .nav i {
     font-size: 3vw;
   }
+
+  .btn-purple{
+    font-size: 3vw;
+  }
+
+  #footer {
+    margin: 50px 0px 40px 0px;
+    padding: 20px 65px;
+  }
 }
 
 @media screen and (max-width: 576px) {
@@ -351,5 +371,19 @@ label {
   .social-media-icons i,
   .social-footer i {
     font-size: 4vw;
+  }
+
+  .btn-purple{
+    font-size: 4vw;
+    padding: 10px 15px 10px 15px;
+  }
+
+  #services {
+    margin: 50px 15px 40px 15px;
+  }
+
+  #footer {
+    margin: 40px 15px 40px 15px;
+    padding: 20px 0 0 0;
   }
 }
